<resources>
    <string name="app_name">Hardwares</string>
    <string name="sample_description">sample_description</string>
    <string name="title">title</string>
    <string name="item4">item4</string>
    <string name="filter">Filter</string>
    <string name="share">share</string>
    <string name="notification">notification</string>
    <string name="createaccount">CreateAccount</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
